--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorPrimary">#6bd6b1</color>
+    <color name="colorPrimaryDark">#35a482</color>
+    <color name="colorAccent">#9fffe3</color>
+
+
 </resources>
