--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,39 @@
         android:textStyle="bold"
         android:paddingTop="8dp"/>
 
+    <EditText
+        android:id="@+id/et_nickname"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/what_is_your_nickname"
+        style="@style/NameStyle"
+        android:textAlignment="center"
+        android:inputType="textPersonName"
+        android:text=""/>
+
+    <Button
+        android:id="@+id/btn_done"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/done"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/layout_margin"
+        android:fontFamily="@font/roboto"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
+
+    <TextView
+        android:id="@+id/tv_nickname_text"
+        style="@style/NameStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:visibility="gone"
+        android:text=""
+        android:background="@color/colorAccent"
+        android:paddingBottom="@dimen/small_padding"/>
+
     <ImageView
         android:id="@+id/iv_android_image"
         android:layout_width="match_parent"
@@ -36,12 +69,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-
-            <pl.droidsonroids.gif.GifImageView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:src="@drawable/android" />
-
             <TextView
                 android:id="@+id/tv_bio_text"
                 style="@style/NameStyle"
@@ -51,6 +78,12 @@
                 android:padding="8dp"
                 android:text="@string/bio"
                 android:textAlignment="center" />
+
+
+            <pl.droidsonroids.gif.GifImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:src="@drawable/android" />
 
         </LinearLayout>
 
